# libtopoheight

./: CMakeLists.txt  FindTurboJPEG.cmake  README.md
doc/: Описание задачи.doc  Текущая реализация.doc
source/: heightmap.hpp  libtopoheight.cpp  libtopoheight.h  picture.cpp  picture.h  rectangle.hpp  triangle.hpp  utils.hpp
tests/: CMakeLists.txt  helpers.lua  libtopoheight.lua  run.lua  test_height.lua  test_height_property.lua  test_heightmap.lua  test_load_buffer.lua  test_load_file.lua
tests/examples/: LAYER13.geojson  README.md
tests/lib/: dkjson.lua  luaunit.lua
